working on welcome page

--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
         <div>Terraforming</div>
         <div>Manufacturing</div>
         <div>Range</div>
+        <div>Scanning</div>
     </div>
 </div>
 
