--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
     createResearchPanel();
 
     var avgWhiteStar =  new Image();
-    avgWhiteStar.src = "images/averstarwhite.png"
+    avgWhiteStar.src = "images/averstarwhite.png";
     avgWhiteStar.width = 36;
     avgWhiteStar.height = 24;
 
