--- a/views/mixins.jade
+++ b/views/mixins.jade
@@ -1,5 +1,11 @@
-mixin game(gameName, gamePlayerCount, gameStatus)
-    div(style = "display:flex;")
-        div gameName
-        div gamePlayerCount
-        div gameStatus
+mixin games(games)
+    div(style = "display:flex; justify-content: space-around; border: solid; margin-bottom: 20px;")
+        div Game Name
+            - for game in games
+                div !{game.name}
+        div Player Count
+            - for game in games
+                div !{game.playerCount}
+        div Status
+            - for game in games
+                div !{game.status}
