--- a/views/login.jade
+++ b/views/login.jade
@@ -32,9 +32,9 @@ html
             div(style="display:flex; align-items:center; width:100%; padding-bottom:5px;")
                 div(style="margin:auto; width:300px;")
                     div(style="display:inline-block; margin-top:4px;") Email
-                    input(id="username" style="display:inline; float:right; border:solid; border-color:#4490ba; border-radius:5px; border-width:1px; padding:4px;" type="text")
+                    input(id="username" style="display:inline; float:right;" class="input" type="text")
             div(style="display:flex; align-items:center; width:100%; padding-bottom:5px;")
                 div(style="margin:auto; width:300px;")
                     div(style="display:inline-block; margin-top:4px;") Password
-                    input(id="password" style="display:inline; float:right; border:solid; border-color:#4490ba; border-radius:5px; border-width:1px; padding:4px;" type="password")
-            button(onclick='httpPostAsync("/login", redirect)' style="background-color:#4490ba; border-radius:5px; border:none; padding:5px; color: white; cursor:pointer; margin:auto;") Login
+                    input(id="password" style="display:inline; float:right;" class="input" type="password")
+            div(onclick='httpPostAsync("/login", redirect)' class="border" style="cursor:pointer; margin:auto;") Login
