Fixing null pointer exception during login. Games aren't populating correctly from the sever though.

--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -42,6 +42,7 @@ body
                 div(onclick="postNewGameToServer(); hideModal('createNewGameModal');" style="cursor:pointer;" class="border") Create Game
 
 
-        +games(games)
+        if(games)
+            +games(games)
 
         div(class="border" onclick="createGame()" style="cursor:pointer;") Create Game
