Fixing null pointer exception during login. Games aren't populating correctly from the sever though.

--- a/views/mixins.jade
+++ b/views/mixins.jade
@@ -2,10 +2,10 @@ mixin games(games)
     div(style = "display:flex; justify-content: space-around; margin-bottom: 20px;" class="border")
         div Game Name
             for game in games
-                div !{game.name}
+                div #{game.name}
         div Player Count
             for game in games
-                div !{game.playerCount}
+                div #{game.playerCount}
         div Status
             for game in games
-                div !{game.status}
+                div #{game.status}
