--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
     avgWhiteStar.height = 24;
 
     canvas.addEventListener("click", onClick);
-    function onClick(event){
+    function onClick(event) {
         let canvasX = event.x - canvas.offsetLeft + document.body.scrollLeft;
         let canvasY = event.y - canvas.offsetTop + document.body.scrollTop;
         socket.emit("click(" + canvasX +", "+ canvasY +")");
@@ -53,12 +53,12 @@
             selectionPanel.removeChild(selectionPanel.lastChild);
         }
         let selectionCount = 0;
-        for(i=0; i < map.MAP.length; i++){
-            if(map.MAP[i].i.x < canvasX + clickableArea && map.MAP[i].i.x > canvasX - clickableArea && map.MAP[i].i.y < canvasY + clickableArea && map.MAP[i].i.y > canvasY - clickableArea){
-                if(map.MAP[i].i.type == "ship"){
+        for(i=0; i < map.MAP.length; i++) {
+            if(map.MAP[i].i.x < canvasX + clickableArea && map.MAP[i].i.x > canvasX - clickableArea && map.MAP[i].i.y < canvasY + clickableArea && map.MAP[i].i.y > canvasY - clickableArea) {
+                if(map.MAP[i].i.type == "ship") {
                     selectionCount++;
                     drawShip(map.MAP[i].i.x, map.MAP[i].i.y, map.MAP[i].i.ships, map.MAP[i].i.destination, map.MAP[i].i.owner, true, ctx);
-                } else if(map.MAP[i].i.type == "star"){
+                } else if(map.MAP[i].i.type == "star") {
                     console.log("star clicked");
                     selectionCount++;
                     let selectedStarName = document.createElement('input');
@@ -86,22 +86,22 @@
                     selectionPanel.appendChild(selectedStar);
                     selectedStarName.setAttribute("style","width:94px");
 
-                    selectedStarIndustry.addEventListener("click", function(){incrementIndustry(selectedStarName.value, selectedStarIndustry)});
-                    selectedStarScience.addEventListener("click", function(){incrementScience(selectedStarName.value, selectedStarScience)});
-                    selectedStarEconomy.addEventListener("click", function(){incrementEconomy(selectedStarName.value, selectedStarEconomy)});
+                    selectedStarIndustry.addEventListener("click", function() {incrementIndustry(selectedStarName.value, selectedStarIndustry)});
+                    selectedStarScience.addEventListener("click", function() {incrementScience(selectedStarName.value, selectedStarScience)});
+                    selectedStarEconomy.addEventListener("click", function() {incrementEconomy(selectedStarName.value, selectedStarEconomy)});
 
-                    selectedStarShips.addEventListener("click", function(){openTransmitShipOrders(selectedStarName.value)});
+                    selectedStarShips.addEventListener("click", function() {openTransmitShipOrders(selectedStarName.value)});
                 }
             }
         }
-        if(selectionCount < 1){
+        if(selectionCount < 1) {
             while (selectionPanel.hasChildNodes()) {
                 selectionPanel.removeChild(selectionPanel.lastChild);
             }
         }
     }
 
-    socket.emit('new player');
+    socket.emit('playerJoin');
     socket.on('state', function(event) {
         if(event.data.toString().substring(2,5) == "MAP") {
             map = JSON.parse(event.data);
@@ -114,9 +114,9 @@
         let y = 0;
         let owner;
         let maxShips;
-        for(let i=0; i < map.MAP.length; i++){
-            if(map.MAP[i].i.type == "star"){
-                if(map.MAP[i].i.id == originStarName){
+        for(let i=0; i < map.MAP.length; i++) {
+            if(map.MAP[i].i.type == "star") {
+                if(map.MAP[i].i.id == originStarName) {
                     x = map.MAP[i].i.x;
                     y = map.MAP[i].i.y;
                     owner = map.MAP[i].i.owner;
@@ -126,7 +126,7 @@
             }
         }
         canvas.onclick = onClick2;
-            function onClick2(event){
+            function onClick2(event) {
                 let destinationStarName = "";
                 let numberOfShips = maxShips;
 
@@ -148,7 +148,7 @@
             }
     }
 
-    function transmitShipOrders(originStarName, x, y, destinationStarName, numberOfShips, owner){
+    function transmitShipOrders(originStarName, x, y, destinationStarName, numberOfShips, owner) {
         let order = {order: []};
         order.order.push({
             origin: originStarName,
@@ -159,12 +159,12 @@
             numberOfShips: numberOfShips,
             owner: owner
         });
-        socket.emit('player-action', JSON.stringify(order));
+        socket.emit('playerAction', JSON.stringify(order));
     }
 
-    function incrementIndustry(starName, selectedStarIndustry){
+    function incrementIndustry(starName, selectedStarIndustry) {
         for(let i = 0; i < map.MAP.length; i++) {
-            if(map.MAP[i].i.id == starName){
+            if(map.MAP[i].i.id == starName) {
                 let owner = parseInt(map.MAP[i].i.owner);
                 if(map.PlayerData[owner].i.credits >= map.MAP[i].i.industry) {
                     map.PlayerData[owner].i.credits -= map.MAP[i].i.industry;
@@ -179,7 +179,7 @@
                         industry: "1",
                         economy: "0",
                     });
-                    socket.emit('player-action', JSON.stringify(order));
+                    socket.emit('playerAction', JSON.stringify(order));
                 }
                 break;
             }
@@ -187,9 +187,9 @@
         drawMap();
     }
 
-    function incrementScience(starName, selectedStarScience){
+    function incrementScience(starName, selectedStarScience) {
         for(i=0; i < map.MAP.length; i++) {
-            if(map.MAP[i].i.id == starName){
+            if(map.MAP[i].i.id == starName) {
                 let owner = parseInt(map.MAP[i].i.owner);
                 if(map.PlayerData[owner].i.credits >= map.MAP[i].i.science) {
                     map.PlayerData[owner].i.credits -= map.MAP[i].i.science;
@@ -204,7 +204,7 @@
                         industry: "0",
                         economy: "0"
                     });
-                    socket.emit('player-action', JSON.stringify(order));
+                    socket.emit('playerAction', JSON.stringify(order));
                 }
                 break;
             }
@@ -212,9 +212,9 @@
         drawMap();
     }
 
-    function incrementEconomy(starName, selectedStarEconomy){
+    function incrementEconomy(starName, selectedStarEconomy) {
         for(i=0; i < map.MAP.length; i++) {
-            if(map.MAP[i].i.id == starName){
+            if(map.MAP[i].i.id == starName) {
                 let owner = parseInt(map.MAP[i].i.owner);
                 if(map.PlayerData[owner].i.credits >= map.MAP[i].i.economy) {
                     map.PlayerData[owner].i.credits -= map.MAP[i].i.economy;
@@ -229,7 +229,7 @@
                         industry: "0",
                         economy: "1"
                     });
-                    socket.emit('player-action', JSON.stringify(order));
+                    socket.emit('playerAction', JSON.stringify(order));
                 }
                 break;
             }
@@ -237,7 +237,7 @@
         drawMap();
     }
 
-    function incrementTech(tech){
+    function incrementTech(tech) {
         console.log("increment tech" + tech);
         let order = {order: []};
         order.order.push({
@@ -247,7 +247,7 @@
             industry: "0",
             economy: "1"
         });
-        socket.emit('player-action', JSON.stringify(order));
+        socket.emit('playerAction', JSON.stringify(order));
     }
 
     function drawMap() {
@@ -260,17 +260,17 @@
             playerInfo.innerHTML="player: " + i + ":" + map.PlayerData[i].i.credits + " weapons: " + map.PlayerData[i].i.weapons + " defense: " + map.PlayerData[i].i.defense + " terraforming: " + map.PlayerData[i].i.terraforming + " manufacturing: " + map.PlayerData[i].i.manufacturing + " range: " + map.PlayerData[i].i.range;
             infoPanel.appendChild(playerInfo);
         }
-        for(let i = 0; i < map.MAP.length; i++){
-            if(map.MAP[i].i.type == "star"){
+        for(let i = 0; i < map.MAP.length; i++) {
+            if(map.MAP[i].i.type == "star") {
                 drawStar(map.MAP[i].i.x, map.MAP[i].i.y, map.MAP[i].i.id, map.MAP[i].i.science, map.MAP[i].i.industry, map.MAP[i].i.economy, map.MAP[i].i.ships, map.MAP[i].i.owner, ctx);
             }
-            if(map.MAP[i].i.type == "ship"){
+            if(map.MAP[i].i.type == "ship") {
                 drawShip(map.MAP[i].i.x, map.MAP[i].i.y, map.MAP[i].i.ships, map.MAP[i].i.destination, map.MAP[i].i.owner, false, ctx);
             }
         }
     }
 
-    function drawStar(x, y, name, science, industry, economy, ships, owner, ctx){
+    function drawStar(x, y, name, science, industry, economy, ships, owner, ctx) {
         ctx.fillStyle="#FFFFFF";
         x = parseInt(x, 10);
         y = parseInt(y, 10);
@@ -280,10 +280,10 @@
         ctx.fillText(industry, x, y - 12);
         ctx.fillText(science, x + 7, y - 12);
         ships = parseInt(ships,10);
-        if(ships > 0){
+        if(ships > 0) {
             ctx.fillText(ships, x, y + 23);
         }
-        if(owner == 0){
+        if(owner == 0) {
             ctx.drawImage(avgWhiteStar, x, y);
         } else {
             ctx.beginPath();
@@ -296,7 +296,7 @@
         }
     }
 
-    function drawShip(x, y, ships, destination, owner, isSelected, ctx){
+    function drawShip(x, y, ships, destination, owner, isSelected, ctx) {
         ctx.fillStyle="#FFFFFF";
         x = parseInt(x, 10);
         y = parseInt(y, 10);
@@ -306,11 +306,11 @@
         ctx.lineTo(x-4,y-3);
         ctx.lineTo(x-4,y+3);
         ctx.fill();
-        for(i=0; i < map.MAP.length; i++){
-            if(map.MAP[i].i.type=="star"){
-                if(map.MAP[i].i.id == destination){
+        for(i=0; i < map.MAP.length; i++) {
+            if(map.MAP[i].i.type=="star") {
+                if(map.MAP[i].i.id == destination) {
                     ctx.strokeStyle=getPlayerColor(parseInt(owner, 10));
-                    if(isSelected){
+                    if(isSelected) {
                         ctx.setLineDash([]);
                         ctx.lineWidth=2;
                     } else {
@@ -326,12 +326,12 @@
         }
     }
 
-    function clearMap(canvas, ctx){
+    function clearMap(canvas, ctx) {
         ctx.fillStyle="black";
         ctx.fillRect(0,0,canvas.width,canvas.height);
     }
 
-    function getPlayerColor(player){
+    function getPlayerColor(player) {
         switch(player) {
             case 0:
                 return "#FFFFFF";
@@ -346,7 +346,7 @@
         }
     }
 
-    function createResearchPanel(player){
+    function createResearchPanel(player) {
 //        let weaponsTech = document.createElement('button');
 //        weaponsTech.type = "button";
 //        weaponsTech.innerHTML = map.PlayerData[player].i.weapons;
