--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,7 @@
     let map;
     let clickableArea = 20;
     const socket = io();
+    let gameId;
 
     window.onload = function(onloadEvent) {
         let xhr = new XMLHttpRequest();
@@ -74,8 +75,9 @@
         document.getElementById(id).style.display = "none";
     }
 
-    function selectGame(gameId) {
-        socket.emit('playerJoin', gameId);
+    function selectGame(selectedGameId) {
+        gameId = selectedGameId;
+        socket.emit('playerJoin', selectedGameId);
     }
 
     let selectionPanel = document.getElementById("selectionPanel");
@@ -205,7 +207,7 @@
             numberOfShips: numberOfShips,
             owner: owner
         });
-        socket.emit('playerAction', JSON.stringify(order));
+        socket.emit('playerAction', gameId, JSON.stringify(order));
     }
 
     function incrementIndustry(starName, selectedStarIndustry) {
@@ -225,7 +227,7 @@
                         industry: "1",
                         economy: "0",
                     });
-                    socket.emit('playerAction', JSON.stringify(order));
+                    socket.emit('playerAction', gameId, JSON.stringify(order));
                 }
                 break;
             }
@@ -250,7 +252,7 @@
                         industry: "0",
                         economy: "0"
                     });
-                    socket.emit('playerAction', JSON.stringify(order));
+                    socket.emit('playerAction', gameId, JSON.stringify(order));
                 }
                 break;
             }
@@ -275,7 +277,7 @@
                         industry: "0",
                         economy: "1"
                     });
-                    socket.emit('playerAction', JSON.stringify(order));
+                    socket.emit('playerAction', gameId, JSON.stringify(order));
                 }
                 break;
             }
@@ -293,7 +295,7 @@
             industry: "0",
             economy: "1"
         });
-        socket.emit('playerAction', JSON.stringify(order));
+        socket.emit('playerAction', gameId, JSON.stringify(order));
     }
 
     function drawMap() {
