fixed star placement bug for uncontrolled star

--- a/views/index.html
+++ b/views/index.html
@@ -329,7 +329,7 @@
             ctx.fillText(ships, x, y + 23);
         }
         if(owner == 0) {
-            ctx.drawImage(avgWhiteStar, x, y);
+            ctx.drawImage(avgWhiteStar, x - 18, y - 12);
         } else {
             ctx.fillText(economy, x - 7, y - 12);
             ctx.fillText(industry, x, y - 12);
